--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Minimum required version of CMake
 cmake_minimum_required(VERSION 3.10)
 
-# Project name and a version number
+# Project name and version number
 project(Ensity-prj-1 VERSION 1.0)
 
 # Specify the C standard
@@ -13,3 +13,15 @@ add_executable(MyExecutable Main_program.c)
 
 # Optionally, set compiler flags
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+
+add_library(objlib OBJECT Main_program.c)
+
+add_executable(main_program Main_program.c)
+
+add_custom_command(TARGET main_program POST_BUILD
+                   COMMAND ${CMAKE_OBJCOPY} --output-target=srec $<TARGET_FILE:main_program> ${CMAKE_CURRENT_BINARY_DIR}/main_program.s19)
+
+add_custom_target(zip ALL
+                  COMMAND ${CMAKE_COMMAND} -E tar "cfv" "artifacts.zip" --format=zip
+                  ${CMAKE_CURRENT_BINARY_DIR}/main_program
+                  ${CMAKE_CURRENT_BINARY_DIR}/main_program.s19)
