--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,18 +22,18 @@ add_executable(main_program Main_program.c)
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 
 # Ensure OBJCOPY is available
-find_program(OBJCOPY NAMES objcopy)
+#find_program(OBJCOPY NAMES objcopy)
 
-if (OBJCOPY)
+#if (OBJCOPY)
     # Create S19 file after build
-    add_custom_command(TARGET main_program POST_BUILD
-                       COMMAND ${OBJCOPY} --output-target=srec $<TARGET_FILE:main_program> ${CMAKE_BINARY_DIR}/main_program.s19)
-else()
-    message(WARNING "objcopy not found. S19 file will not be created.")
-endif()
+#    add_custom_command(TARGET main_program POST_BUILD
+#                       COMMAND ${OBJCOPY} --output-target=srec $<TARGET_FILE:main_program> ${CMAKE_BINARY_DIR}/main_program.s19)
+#else()
+#    message(WARNING "objcopy not found. S19 file will not be created.")
+#endif()
 
 # Create a zip file with the executable and the S19 file
-add_custom_target(zip ALL
-                  COMMAND ${CMAKE_COMMAND} -E tar "cfv" "artifacts.zip" --format=zip
-                  ${CMAKE_BINARY_DIR}/main_program
-                  $<$<BOOL:${OBJCOPY}>:${CMAKE_BINARY_DIR}/main_program.s19>)
+# add_custom_target(zip ALL
+#                  COMMAND ${CMAKE_COMMAND} -E tar "cfv" "artifacts.zip" --format=zip
+#                  ${CMAKE_BINARY_DIR}/main_program
+#                  $<$<BOOL:${OBJCOPY}>:${CMAKE_BINARY_DIR}/main_program.s19>)
