--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
 # Set the CMake compiler to point to the Cygwin gcc/g++ binaries
-set(CMAKE_C_COMPILER "/cygdrive/c/cygwin64/bin/gcc.exe")
-set(CMAKE_CXX_COMPILER "/cygdrive/c/cygwin64/bin/g++.exe")
+set(CMAKE_C_COMPILER "/usr/bin/gcc")
+set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
 # Make sure to use Cygwin-style paths instead of Windows path
 set(CMAKE_BINARY_DIR "C:/ProgramData/Jenkins/.jenkins/workspace/build/build")
